add karma unit test

--- a/src/main/frontend/src/app/shortest-path/shortest-path.component.html
+++ b/src/main/frontend/src/app/shortest-path/shortest-path.component.html
@@ -3,7 +3,7 @@
     <br>
 
     <div class="row">
-        <h1>h1>Interstellar Transport System (ITS)</h1>
+        <h1>Interstellar Transport System (ITS)</h1>
     </div>
 
     <br>
